--- a/proyecto/Prácticas/Prácticas/App.config
+++ b/proyecto/Prácticas/Prácticas/App.config
@@ -6,7 +6,7 @@
 
   <appSettings>
     <add key ="servidor" value="localhost"/>
-      <add key ="database" value="prácticas"/>
+      <add key ="database" value="practicas"/>
         <add key ="usuario" value="root"/>
           <add key ="password" value=""/>
     </appSettings>
